[metadata]
url = https://github.com/mih/datalad-mihextras
author = Michael Hanke
author_email = michael.hanke@gmail.com
description = DataLad extension with special interest functionality or drafts of future additions to DataLad proper
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
install_requires =
    datalad >= 0.13.0
test_requires =
    nose
    coverage
packages = find:
include_package_data = True

[options.packages.find]
# do not ship the build helpers
exclude=
    _datalad_buildsupport

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_mihextras/_version.py
versionfile_build = datalad_mihextras/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_mihextras/_version.py
